# ratify

./: .gitignore  Cargo.toml  bench_forward.sh  run_tests.py  test.sh
src/: algo.rs  common.rs  core.rs  forward.rs  forward_validate.rs  main.rs  parser.rs  propagator.rs  validator.rs  watcher.rs
src/common/: assignment.rs  literal.rs  storage.rs
src/core/: assignment.rs  clause.rs  clause_storage.rs  lemma.rs  literal.rs  mod.rs
src/forward/: mutating_propagator.rs  propagator.rs
src/parser/: cnf.rs  dimacs.rs  drat.rs
src/validator/: backward.rs  forward.rs  watcher.rs
test_cases/: am_5_5.shuffled-as.sat03-361.cnf
