[package]
name = "ratify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
anyhow = "1.0"
nom = "7"
itertools = "0.11.0"
bimap = "0.6.3"
indicatif = "0.17.6"

[profile.release]
debug = true
