[package]
name = "ratify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
nom = "7"
itertools = "0.11.0"
indicatif = "0.17.6"
clap = { version = "4.4.2", features = ["derive"] }
fxhash = "0.2.1"
